Added 01_metadata.ipynb, 02_mesoscale connectivity.ipynb; and changes in 2 other files

--- a/code/02_mesoscale connectivity.ipynb
+++ b/code/02_mesoscale connectivity.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b1f94bd0-8928-4a05-8079-2aa84a3ac300",
    "metadata": {
     "tags": []
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "531bb4ba-851d-45a7-8a5e-a0eeab22b67c",
    "metadata": {
     "tags": []
@@ -317,7 +317,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "cd8e8d3f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -349,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a6d1431c",
    "metadata": {
     "scrolled": true,
@@ -501,7 +503,7 @@
        "48  {'AP': 114, 'ML': 275, 'DV': 103}  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,9 +535,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "69a5f6e0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -546,7 +550,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,9 +569,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2c666ea8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -578,7 +584,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,9 +601,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "117a504b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -608,7 +616,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,9 +645,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "922a97c8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -669,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1b38b213",
    "metadata": {
     "tags": []
@@ -802,7 +812,7 @@
        "[724279 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "efc0b508",
    "metadata": {
     "tags": []
@@ -1251,7 +1261,7 @@
    "source": [
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
     "\n",
-    "**Construct a Connectivity Matrix** \n",
+    "**Compare the expression across brain structures** \n",
     "\n",
     "To help us assess the connectivity across brain regions, we can use cell_counts_df to construct a connectivity matrix.  \n",
     "    \n",
